--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
 android {
     compileSdkVersion 29
     useLibrary 'org.apache.http.legacy'
@@ -49,10 +48,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta2'
     implementation 'com.android.support:design:29.1.0'
     implementation 'com.google.android.gms:play-services-ads:18.0.0'
-    implementation 'com.google.android.gms:play-services-measurement:17.0.0'
-    implementation 'com.google.android.gms:play-services-measurement-sdk:17.0.0'
+    implementation 'com.google.android.gms:play-services-measurement:17.3.0'
+    implementation 'com.google.android.gms:play-services-measurement-sdk:17.3.0'
     //firebase
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     //firebase ends
     implementation 'me.drakeet.support:toastcompat:1.1.0'
