--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation "io.socket:socket.io-client:0.6.2"
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
