--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
         google()
     }
     dependencies {
